Adding Table of content

--- a/GitBasics.html
+++ b/GitBasics.html
@@ -10,5 +10,14 @@
     <img src="git.png" alt="Git Logo" srcset="" width="1350px" height="200px" />
     <h1 style="color: orangered; font-size: 50px">Git Cheat Sheet</h1>
     <h2>The essential Git commands every developer must know...</h2>
+
+    <h2 style="font-size: 40px; text-align: center">Table of Content</h2>
+    <ul style="font-size: 25px">
+      <li>Creating Snapshots</li>
+      <li>Browsing History</li>
+      <li>Branching & Merging</li>
+      <li>Collaboration</li>
+      <li>History</li>
+    </ul>
   </body>
 </html>
