--- a/GitBasics.html
+++ b/GitBasics.html
@@ -91,9 +91,48 @@
           git restore . <br />
           git clean -fd
         </p>
-
         <h3>Restoring an earlier version of a file</h3>
         <p>restore --source=HEAD~2 file.js</p>
+      </li>
+      <li>
+        <h1>Browsing History:</h1>
+        <h3>Viewing the history</h3>
+        <p>
+          git log --stat <br />
+          git log --patch
+        </p>
+
+        <h3>Filtering the history</h3>
+        <p>
+          git log -3 <br />
+          git log --author=“Mosh” <br />
+          git log --before=“2020-08-17” <br />
+          git log --after=“one week ago” <br />
+          git log --grep=“GUI” <br />
+          git log -S“GUI” <br />
+          git log hash1..hash2 <br />
+          git log file.txt
+        </p>
+        <h3>Viewing a commit</h3>
+        <p>
+          git show HEAD~2 <br />
+          git show HEAD~2:file1.txt
+        </p>
+
+        <h3>Comparing commits</h3>
+        <p>
+          git diff HEAD~2 HEAD <br />
+          git diff HEAD~2 HEAD file.txt
+        </p>
+        <h3>Checking out a commit</h3>
+        <p>
+          git checkout dad47ed <br />
+          git checkout master
+        </p>
+        <h3>Finding contributors</h3>
+        <p>git shortlog</p>
+        <h3>Finding the author of lines</h3>
+        <p>git blame file.txt</p>
       </li>
     </ol>
   </body>
