--- a/GitBasics.html
+++ b/GitBasics.html
@@ -134,6 +134,46 @@
         <h3>Finding the author of lines</h3>
         <p>git blame file.txt</p>
       </li>
+      <li>
+        <h1>Branching & Merging</h1>
+        <h3>Managing branches</h3>
+        <p>
+          git branch bugfix <br />
+          git checkout bugfix <br />
+          git switch bugfix <br />
+          git switch -C bugfix <br />
+          git branch -d bugfix
+        </p>
+        <h3>Comparing branches</h3>
+        <p>
+          git log master..bugfix <br />
+          git diff master..bugfix
+        </p>
+        <h3>Stashing</h3>
+        <p>
+          git stash push -m “New tax rules” <br />
+          git stash list <br />
+          git stash show stash@{1} <br />
+          git stash show 1 <br />
+          git stash apply 1 <br />
+          git stash drop 1 <br />
+          git stash clear
+        </p>
+        <h3>Merging</h3>
+        <p>
+          git merge bugfix <br />
+          git merge --no-ff bugfix <br />
+          git merge --squash bugfix <br />
+          git merge --abort
+        </p>
+        <h3>Viewing the merged branches</h3>
+        <p>
+          git branch --merged <br />
+          git branch --no-merged
+        </p>
+        <h3>Rebasing</h3>
+        <p>git rebase master</p>
+      </li>
     </ol>
   </body>
 </html>
