--- a/GitBasics.html
+++ b/GitBasics.html
@@ -174,6 +174,39 @@
         <h3>Rebasing</h3>
         <p>git rebase master</p>
       </li>
+      <li>
+        <h1>Collaboration</h1>
+
+        <h3>Cloning a repository</h3>
+        <p>git clone url</p>
+        <h3>Syncing with remotes</h3>
+        <p>
+          git fetch origin master <br />
+          git fetch origin <br />
+          git fetch <br />
+          git pull <br />
+          git push origin master <br />
+          git push
+        </p>
+        <h3>Sharing tags</h3>
+        <p>
+          git push origin v1.0 <br />
+          git push origin —delete v1.
+        </p>
+        <h3>Sharing branches</h3>
+        <p>
+          git branch -r <br />
+          git branch -vv <br />
+          git push -u origin bugfix <br />
+          git push -d origin bugfix
+        </p>
+        <h3>Managing remotes</h3>
+        <p>
+          git remote <br />
+          git remote add upstream url <br />
+          git remote rm upstream
+        </p>
+      </li>
     </ol>
   </body>
 </html>
